# wpm

./: .gitignore  Cargo.toml  README.md
src/: config.rs  main.rs  profile.rs  tokens.rs  type_render.rs
src/render/: menu.rs  mod.rs  profile.rs  test.rs  util.rs  wordlist.rs
src/render/menu/: colorscheme.rs  menu_action.rs  menu_element.rs  mod.rs
src/render/stats/: mod.rs
src/render/test/: letter.rs  live_wpm.rs  mod.rs  mode.rs  result.rs  test_mode.rs  test_result.rs
wordlist/: README  eng_10k.txt  eng_misspelled.txt
