[package]
name = "wpm"
version = "0.8.3"
edition = "2021"

[dependencies]
crossterm = "0.27"
clap = "4.5"
flate2 = "1.0"
serde = "1.0"
serde_cbor = "0.10"
serde_derive = "1.0"
strum = "0.26"
strum_macros = "0.26"
rand = "0.8"
rgb = "0.8"
textplots = "0.8"
indexmap = { version = "2.2", features = ["serde"] }
